[package]
name = "thunderhawk"
version = "0.1.0"
edition = "2021"
authors = ["Richard Chukwu <richinex@gmail.com>"]
description = "A web/command-line tool designed for load testing APIs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
env_logger = "0.11.2"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.50"
reqwest = { version = "0.12.1", features = ["json"] }
futures = "0.3"
regex = "1.0"
serde_yaml = "0.9.32"
lazy_static = "1.4.0"
glob = "0.3.0"
clap = "4.5.0"
thiserror = "1.0"
anyhow = "1.0.80"
